# flux2-litekit

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: checks.yml
configs/: infer_i2i.example.yaml  infer_t2i.example.yaml  train_i2i.example.yaml  train_i2i_bootstrap.example.yaml  train_t2i.example.yaml  train_t2i_bootstrap.example.yaml
examples/: i2i_metadata.sample.jsonl  t2i_metadata.sample.jsonl
flux2_litekit/: __init__.py  common.py  config.py  datasets.py  infer.py  lora.py  train.py
scripts/: common.sh  run_infer_i2i.sh  run_infer_t2i.sh  run_train_i2i.sh  run_train_t2i.sh
